RESOLVED FIXED160235
[Soup] Test http/tests/xmlhttprequest/auth-reject-protection-space.html fails since added in r203743
https://bugs.webkit.org/show_bug.cgi?id=160235
Summary [Soup] Test http/tests/xmlhttprequest/auth-reject-protection-space.html fails...
Carlos Garcia Campos
Reported 2016-07-27 00:34:24 PDT
It times out in release and crashes in debug due to an ASSERT_NOT_REACHED().
Attachments
Patch (1.82 KB, patch)
2016-07-27 00:39 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-07-27 00:39:18 PDT
Michael Catanzaro
Comment 2 2016-07-27 06:34:04 PDT
Comment on attachment 284679 [details] Patch Would be nice to have an ASSERT_WKR() for cases like this.
Carlos Garcia Campos
Comment 3 2016-07-27 08:53:45 PDT
Note You need to log in before you can comment on or make changes to this bug.